--- a/firebase.json
+++ b/firebase.json
@@ -1,19 +1,30 @@
 {
-  "functions": [
+  "functions":
     {
-      "source": "functions",
-      "codebase": "default",
+      "source": "py-functions",
+      "codebase": "py-functions",
       "ignore": [
-        "node_modules",
+        "venv",
         ".git",
         "firebase-debug.log",
         "firebase-debug.*.log",
         "*.local"
       ],
-      "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint",
-        "npm --prefix \"$RESOURCE_DIR\" run build"
-      ]
-    }
-  ]
+      "runtime": "python313"
+    },
+  "emulators": {
+    "firestore": {
+      "port": 8080
+    },
+    "auth": {
+      "port": 9099
+    },
+    "functions": {
+      "port": 5001
+    },
+    "ui": {
+      "enabled": true
+    },
+    "singleProjectMode": true
+  }
 }
